tests/js/invalid/list/mismatched-type-4.buri
Color = #red | #green | #blue

colors: [Color] = [#orange]